<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="lang_prefix">en</string>
    
    <string name="title_numpad">Numpad</string>
    <string name="title_mathwithnum">MathNum</string>
    <string name="title_math">Math</string>
    <string name="title_chem">Chem</string>

    <string name="lang_default">Default</string>
    <string name="lang_da">Danish</string>
    <string name="lang_en">English</string>

    <string name="text_keyboards">Keyboards</string>
    <string name="text_select_keyboards">Active layouts</string>
    <string name="text_select_keyboards_hint">Choose which of the available layouts are active</string>
    <string name="text_select_lang">App language</string>
    <string name="app_name">Keyboard Extender</string>
    <string name="text_keyboard">Keyboard</string>
    <string name="text_settings">Settings</string>
    <string name="text_dragndrop">Reorder layouts</string>
    <string name="text_dragndrop_hint">Choose the order of your active layouts</string>
    <string name="text_help">Help</string>
    <string name="text_help_description">Description :</string>
    <string name="text_help_usage">Usage :</string>
    <string name="text_help_install">Install :</string>
    <string name="text_help_contact">Contact :</string>
    <string name="text_help_description_content">Use your phone as an extended keyboard for your computer over Wi-Fi or Bluetooth !\n\nMain features :\n - Choose between several keyboard layouts to suit your needs\n - Swipe left and right for easy access to different layouts\n - Use your standard android keyboard to type on your computer\n - Protect your computer from unwanted connections with a password\n - Special keyboard layouts for use when doing math or science\n</string>
    <string name="text_help_install_content">In order to use the app you will first have to download the server for your pc on :\nwww.bit.ly/keyboardextender\n</string>
    <string name="text_help_usage_content">Press any button in the app to input the character(s) it represents without the need to write a shortcut on your keyboard\n\nHold for about a second to access secondary functions on some buttons e.g. sin, cos, and tan.\n\nSwipe left or right to access another keyboard layout\n\nThrough the settings menu you can choose which keyboard layouts are available to swipe to.\n</string>
    <string name="text_help_contact_content">bit.ly/keyboardextender\n</string>
    <string name="text_connections">Connections</string>
    <string name="text_vibration">Vibration</string>
    <string name="text_miscellaneous">Miscellaneous</string>
    <string name="text_fullscreen">Fullscreen</string>
    <string name="text_keep_screen_on">Keep screen on</string>
    <string name="text_reset_preferences">Reset preferences</string>
    <string name="text_connection_established">Connection established</string>
    <string name="text_connection_closed">Connection canceled</string>
    <string name="text_connection_refused">Connection refused</string>
    <string name="text_illegal_connection_parameter">Illegal connection parameter</string>
    <string name="text_authentificated">Authentificated</string>
    <string name="text_not_authentificated">Wrong password</string>
    <string name="text_bluetooth_not_available_version">Bluetooth is not available on your phone (only Android 2.0+)</string>
    <string name="text_bluetooth_not_available">Bluetooth is not available</string>
    <string name="text_bluetooth_not_enabled">Bluetooth is not enabled</string>
    <string name="text_bluetooth_remote_device_not_found">Remote bluetooth device not found</string>
    <string name="text_bluetooth_can_not_connect">Can not connect to remote bluetooth device</string>
    <string name="text_first_run_dialog">In order for the app to comunicate with your pc you will need to run the server on your computer.\nDownload it on:\nwww.bit.ly/keyboardextender\nNeed more help?</string>
    <string name="text_first_run_dialog_title">Thank you for installing Keyboard Extender</string>
    <string name="text_new_version_dialog">Download the newest version of the server on :\nwww.bit.ly/keyboardextender</string>
    <string name="text_new_version_dialog_title">Keyboard Extender has been updated</string>
    <string name="text_no_connection">No connections\nPress the \"Plus button\" to add one</string>
    <string name="text_no_connection_selected">No connection selected\nPress the \"Connections icon\"</string>
    <string name="text_bluetooth_discovery_started">Bluetooth discovery started</string>
    <string name="text_bluetooth_discovery_finished">Bluetooth discovery finished</string>
    <string name="text_bluetooth_device_not_paired">Bluetooth device not paired\nYou should pair it manually</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_new">New</string>
    <string name="text_connection_type">Connection type</string>
    
    <string name="text_use">Use</string>
    <string name="text_edit">Edit</string>
    <string name="text_remove">Remove</string>

    <string name="text_wifi">Wi-Fi</string>
    <string name="text_bluetooth">Bluetooth</string>
    <string name="text_bluetooth_devices">Bluetooth devices</string>
    <string name="text_name">Name : </string>
    <string name="text_password">Password : </string>
    <string name="text_host">Host : </string>
    <string name="text_port">Port : </string>
    <string name="text_address">Address : </string>
    <string name="text_save">Save</string>
    <string name="text_new_connection">New connection</string>
    <string name="text_hint_host">192.168.x.x</string>
    <string name="title_activity_layout_edit">Edit layout</string>
    
    <string name="text_edit_layout">Edit layout</string>
    <string name="text_new_layout">NEW LAYOUT</string>
    <string name="action_resize">Resize</string>
    <string name="text_resize_row">Rows:</string>
    <string name="text_resize_row_hint">Rows</string>
    <string name="text_resize_col">Cols:</string>
    <string name="text_resize_col_hint">Cols</string>
    
    <string name="text_edit_button">Edit button</string>
    <string name="text_edit_button_text">Visual text:</string>
    <string name="text_edit_button_text_hint"></string>
    <string name="text_edit_button_output">Button output:</string>
    <string name="text_edit_button_output_hint"></string>
    
    <string name="action_load">Load</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    
    <string name="text_edit_layout_name">Edit name</string>
    <string name="text_edit_layout_name_text">Layout name:</string>
    <string name="text_edit_layout_name_hint"></string>
    
    <string name="text_save_layout">Save layout</string>
    <string name="text_save_layout_text">Save as:</string>
    <string name="text_save_layout_hint"></string>
    
    <string name="text_load_layout">Load layout</string>
    <string name="text_delete_layout">Delete layout</string>
    <string name="text_delete_layout_sure">Are you sure?</string>
    <string name="text_delete_layout_sure_text">Are you sure that you want to delete the layout file:</string>

    <string name="warning_only_int_title">Invalid filename</string>
    <string name="warning_only_int_message">The filename must contain letters</string>
</resources>