<menu 	xmlns:android="http://schemas.android.com/apk/res/android"
   		xmlns:yourapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/CONNECTIONS_MENU_ITEM_ID"
        android:orderInCategory="1"
        android:icon="@drawable/device_access_network_wifi"
        android:showAsAction="ifRoom"
        android:title="@string/text_connections"/>
    <item
        android:id="@+id/KEYBOARD_MENU_ITEM_ID"
        android:orderInCategory="2"
        android:icon="@drawable/hardware_keyboard"
        android:showAsAction="ifRoom"
        android:title="@string/text_keyboard"/>
    <item
        android:id="@+id/EDIT_LAYOUT_ITEM_ID"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/text_edit_layout"/>
    <item
        android:id="@+id/SETTINGS_MENU_ITEM_ID"
        android:orderInCategory="10"
        android:showAsAction="never"
        android:title="@string/text_settings"/>
    <item
        android:id="@+id/HELP_MENU_ITEM_ID"
        android:orderInCategory="11"
        android:showAsAction="never"
        android:title="@string/text_help"/>


</menu>
